# ShellAnyWhere

./: .gitignore  Cargo.toml  README.md  README_CN.md  config.toml
.github/workflows/: build.yml
crates/client/: Cargo.toml
crates/client/src/: cli.rs  kcp_connector.rs  lib.rs  main.rs  terminal.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/crypto/: auth.rs  mod.rs  tls.rs
crates/core/src/protocol/: context_stream.rs  control.rs  kcp_transport.rs  mod.rs
crates/core/src/util/: compress.rs  guard.rs  logging.rs  mod.rs  terminal_filter.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: cli.rs  http.rs  kcp.rs  lib.rs  listener.rs  main.rs  relay.rs  service.rs  session_mgr.rs  ssh.rs  transport.rs  udp_mux.rs  webrtc.rs
crates/shell/: Cargo.toml
crates/shell/src/: cli.rs  command.rs  connector.rs  focus.rs  kcp_connector.rs  lib.rs  local_io.rs  main.rs  reconnect.rs  session.rs  setup.rs  virtual_term.rs
crates/shell/src/pty/: mod.rs  unix.rs  windows.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  env.d.ts  main.tsx  store.ts  style.css
web/src/assets/: wterm.wasm
web/src/components/: LoginDialog.tsx  SessionTabs.tsx  TerminalView.tsx  VirtualKeyboard.tsx
web/src/protocol/: auth.ts  base-transport.ts  bincode.ts  data-stream.ts  frame.ts  transport-utils.ts  transport.ts  webrtc-transport.ts
web/src/utils/: ctrl-keys.ts  eruda.ts
web/src/wterm/core/: index.ts  wasm-bridge.ts
web/src/wterm/dom/: debug.ts  index.ts  input.ts  renderer.ts  terminal.css  wterm.ts
web/src/wterm/react/: Terminal.tsx  index.ts
