[workspace]
members = [
    "crates/core",
    "crates/shell",
    "crates/server",
    "crates/client",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ejfkdev"]
license = "MPL-2.0"
description = "Remote shell access from anywhere"
repository = "https://github.com/ejfkdev/ShellAnyWhere"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-minimal = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }
futures = { version = "0.3", features = ["compat"] }

# Serialization / protocol
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
serde_json = "1"
bytes = "1"
http = "1"
toml = "0.8"

# Codec / transport
tokio-util = { version = "0.7", features = ["codec", "compat"] }
yamux = "0.6"
url = "2.5.8"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
webpki-roots = "1"
rustls-native-certs = "0.8.3"

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
hkdf = "0.12"
ed25519-dalek = { version = "2.2.0", features = ["default"] }
subtle = "2.6.1"

# CLI / config
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"

# Error handling
anyhow = "1"

# Async trait
async-trait = "0.1"

# Time
chrono = "0.4.44"

# Encoding
pem = "3"
base64 = "0.22"
hostname = "0.4.2"

# Platform services
windows-service = "0.8"

# Memory allocator
mimalloc = "0.1.50"

# Testing
tempfile = "3"

# Profile
[profile.release]
lto = "fat"
strip = "symbols"
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = 0

[profile.dist]
inherits = "release"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
