[package]
name = "saw-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "ShellAnyWhere client"

[[bin]]
name = "saw-client"
path = "src/main.rs"

[features]
default = ["kcp"]
kcp = ["saw-core/kcp"]

[dependencies]
saw-core = { path = "../core", features = ["native-certs", "auth", "compress", "config", "kcp"] }
mimalloc = { workspace = true }
tokio = { workspace = true }
log = "0.4"
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }

# Client-only
crossterm = { version = "0.29", features = ["events", "event-stream"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
