[package]
name = "saw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared core library for ShellAnyWhere"

[features]
default = ["server", "native-certs", "auth", "compress", "config", "terminal-filter", "kcp"]
server = ["dep:rcgen", "dep:pem", "dep:base64", "dep:hostname"]
kcp = ["dep:kcp-tokio", "dep:kcp-core"]
native-certs = ["dep:rustls-native-certs"]
auth = ["dep:sha2", "dep:hmac", "dep:hkdf", "dep:rand", "dep:dirs", "dep:subtle", "dep:ed25519-dalek", "dep:base64"]
compress = ["dep:lz4_flex"]
config = ["dep:toml", "dep:dirs"]
terminal-filter = []

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
hkdf = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
lz4_flex = { version = "0.11", optional = true }
toml = { workspace = true, optional = true }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
anyhow = { workspace = true }
pem = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }
kcp-tokio = { version = "0.5", optional = true }
kcp-core = { version = "0.1", optional = true }
subtle = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
bytes = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = { workspace = true }
